namespace Courses.Domain.Enums;

public enum EnrollmentStatus
{
    Active,
    Completed,
    Dropped
}
